# CucaAi

Engine/: Board.cpp  Board.hpp  CMakeLists.txt  Dice.cpp  Dice.hpp  DiceCalc.py  GameBoard.cpp  Player.cpp  main.cpp
maps/: classic.json
